added .container div, changed its margins to be auto, and set its max-width to be 1200px.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<header>
-  <ul>
-    <a href="index.html"><img src="../Exercise Files/Exercise Files/Images/logo-daniel-walter-scott.png" width="308" height="37" alt="Daniel Scott Logo"></a>
-  </ul>
-</header>
-
-
+  <div class="container">
+    <header>
+      <ul>
+        <a href="index.html"><img src="../Exercise Files/Exercise Files/Images/logo-daniel-walter-scott.png" width="308" height="37" alt="Daniel Scott Logo"></a>
+        </ul>
+      </header>
+  </div>
 </body>
 </html>
